<resources>
    <string name="toast_input">PLEASE INPUT YOUR INFOMATION</string>
    <string name="hint_edt_username">input username</string>
    <string name="hint_edt_age">input your age</string>
    <string name="btnIntent">GO</string>
    <string name="username">Welcome: %s</string>
    <string name="age">Age: %s</string>
    <string name="app_name">New User</string>
    <string name="user_name">User Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="button">Submit</string>
    <string name="gender">Gender</string>
    <string name="textview.text.title">Golf App</string>
    <string name="textview.text.slogan">Some text blah about something</string>
    <string name="editext.hint.email_address">Email Address</string>
    <string name="editext.hint.emaill_password">Email Password</string>
    <string name="editext.hint.name">Name</string>
    <string name="togglebutton.text.male">Male</string>
    <string name="togglebutton.text.female">Female</string>
    <string name="button.text.continue">Continue</string>

</resources>
